--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "ethereumjs-util": "^7.1.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "near-api-js": "^2.1.3",
+    "web3": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
