--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-scripts": "^5.0.1",
+    "react-step-progress-bar": "^1.0.3",
     "tabler-icons-react": "^1.56.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.10.0"
