--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "ethereumjs-util": "^7.1.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongodb": "^5.5.0",
+    "mysql": "^2.18.1",
     "near-api-js": "^2.1.3",
+    "sqlite3": "^5.1.6",
     "web3": "^1.10.0",
     "web3-eth-accounts": "^1.10.0"
   },
   "devDependencies": {
+    "image-downloader": "^4.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
 }
