--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "image-downloader": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-scripts": "^5.0.1",
     "react-step-progress-bar": "^1.0.3",
+    "sqlite3": "^5.1.6",
     "tabler-icons-react": "^1.56.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.10.0"
