--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
+    "babel-plugin-macros": "^3.1.0",
     "cors": "^2.8.5",
     "ethereumjs-util": "^7.1.5",
     "express": "^4.18.2",
@@ -20,6 +22,7 @@
     "mongodb": "^5.5.0",
     "mysql": "^2.18.1",
     "near-api-js": "^2.1.3",
+    "react-icons": "^4.8.0",
     "sqlite3": "^5.1.6",
     "web3": "^1.10.0",
     "web3-eth-accounts": "^1.10.0"
